--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ pytest-random-order = "*"
 pytest-timeout = "*"
 tox = "*"
 dominate = "*"
+flake8-requirements = ">=1.3.2"
 
 # hardware tests
 pyserial = "*"
