TELL ME WHYYY (aint nothing but a heartache)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ stages:
 
 before_script:
   - . $HOME/.nix-profile/etc/profile.d/nix.sh || true
-  - nix-shell --run "pipenv sync"
+  - nix-shell --run "pipenv sync -v"
   - export LEGACY_VERSION=$(nix-shell --run "./tools/version.sh legacy/firmware/version.h")
   - export CORE_VERSION=$(nix-shell --run "./tools/version.sh core/embed/firmware/version.h")
 
